--- a/crm.html
+++ b/crm.html
@@ -14,7 +14,10 @@
     <section class="modal">
         <div class="modal__overlay">
             <div class="container modal__container">
-                <h2 class="modal__title">Добавить товар</h2>
+                <div class="modal__head-block">
+                    <h2 class="modal__title">Добавить товар</h2>
+                    <p class="modal__id">id: 201910241</p>
+                </div>
                 <div class="modal__line"></div>
                 <form class="form" action="https://jsonplaceholder.typicode.com/posts">
                     <fieldset class="form__fieldset-all">
@@ -47,7 +50,7 @@
                             <label class="form__name form__name--two-input">Дисконт</label>
                             <div class="form__checking">
                                 <input class="form__input form__input--checkbox" type="checkbox" checked>
-                                <input class="form__input form__input--grey" type="text">
+                                <input class="form__input" type="text">
                             </div>
                         </fieldset>
                         <fieldset class="form__fieldset">
@@ -55,8 +58,19 @@
                             <input class="form__input" type="text">
                         </label>
                         </fieldset>
+                        <div class="modal__error-message">
+                            <p class="modal__error-message--1mb">Изображение не должно 
+                                превышать размер 1 Мб</p>
+                        </div>
                         <div class="modal__adding-file">
                             <button class="modal__file">Добавить изображение</button>
+                        </div>
+                        <div class="modal__add-img">
+                            <div class="modal__add-img--user">
+                                <button class="modal__delete-img">
+                                    <img class="modal__delete-img-btn" src="css/modal/image/delete-forever.svg" alt="Кнопка удаления картинки">
+                                </button>
+                            </div>
                         </div>
                     </fieldset>
                 </form>
@@ -67,7 +81,15 @@
                 <svg class="modal__close" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M2 2L22 22" stroke="#6E6893" stroke-width="3" stroke-linecap="round"/>
                     <path d="M2 22L22 2" stroke="#6E6893" stroke-width="3" stroke-linecap="round"/>
-                </svg>  
+                </svg>
+                <div class="modal__error">
+                    <p class="modal__error-text modal__error-text--x">X</p>
+                    <p class="modal__error-text modal__error-text--wrong">Что-то пошло не так</p>
+                    <svg class="modal__close" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M2 2L22 22" stroke="#6E6893" stroke-width="3" stroke-linecap="round"/>
+                        <path d="M2 22L22 2" stroke="#6E6893" stroke-width="3" stroke-linecap="round"/>
+                    </svg>
+                </div>
             </div>
         </div>
     </section>
